# ffi-gen

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example/: .gitignore  Cargo.toml  README.md  api.rsh  build.rs
example/dart/lib/: bindings.dart
example/js/: bindings.d.ts  bindings.mjs
example/src/: bindings.rs  lib.rs
macro/: Cargo.toml
src/: abi.rs  dart.rs  grammar.pest  js.rs  lib.rs  parser.rs  rust.rs
src/abi/: export.rs  import.rs
tests/: finalizers.rs  object.rs
